--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ Esta guía paso a paso te guiará durante cada una de las etapas de la obtenció
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
               <div class="icon"><i class="bi bi-briefcase" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+              <h4 class="title"><a href="">ALQUILERES EN ITALIA</a></h4>
               <p class="description">Tenemos departamentos en gestión que son los que ofrecemos a través de nuestras redes <b>cuando estàn disponibles</b>.
                 <b>No realizamos busqueda de departamentos</b>, sino que ofrecemos los que tenemos en gestión. 
                 Los departamentos disponibles pueden ser reservados cuando están publicados <b>unicamente</b>, es decir, que no se realizan reservas a futuro.
@@ -187,7 +187,7 @@ Esta guía paso a paso te guiará durante cada una de las etapas de la obtenció
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
               <div class="icon"><i class="bi bi-card-checklist" style="color: #e9bf06;"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
+              <h4 class="title"><a href="">PEDIDOS DE ACTAS</a></h4>
               <p class="description">Realizamos el pedido en Italia del acta de tu AVO sólo si tienes los datos precisos, como el nombre y apellido, 
                 lugar (comuna) y fecha de nacimiento. No es obligatorio pero si tienes el nombre de los padres es mucho mejor.
                 Podemos pedirla en la comuna, si ya existía el registro civil, o bien podemos pedirlo a la Diócesis o Archivo Histórico si aún se registraban en las Iglesias, 
@@ -201,7 +201,7 @@ Esta guía paso a paso te guiará durante cada una de las etapas de la obtenció
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
               <div class="icon"><i class="bi bi-bar-chart" style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+              <h4 class="title"><a href="">JUICIO POR VIA MATERNA</a></h4>
               <p class="description">Es necesario que sepas, que el juicio por vía materna es procedente cuando el hijo (sea hombre o mujer) 
                 de la primera mujer que se encuentre dentro de la línea de descendencia, 
                 haya nacido antes del 1 de enero de 1948. Sólo en estos casos es necesario solicitar el reconocimiento por vía judicial. <br>
@@ -214,7 +214,7 @@ Esta guía paso a paso te guiará durante cada una de las etapas de la obtenció
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
             <div class="box">
               <div class="icon"><i class="bi bi-binoculars" style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
+              <h4 class="title"><a href="">CONTROLAMOS TU CARPETA</a></h4>
               <p class="description">¿Tenés que apostillar, Traducir y Visto Consular o Asseverazione para poder presentar tu carpeta en Italia y/o en Argentina? 
                 ¿Quéres saber si tu documentación es correcta? Lo más importante de todo es controlar las actas de tu carpeta para que vengas seguro y no 
                 te encuentres con problemas ya en Italia cuando la presentes en la Comuna. Te ofrecemos el Servicio de Control de Carpetas por 
@@ -227,8 +227,10 @@ Esta guía paso a paso te guiará durante cada una de las etapas de la obtenció
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="100">
             <div class="box">
               <div class="icon"><i class="bi bi-brightness-high" style="color: #d6ff22;"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <h4 class="title"><a href="">ACOMPAÑAMIENTO EN ITALIA</a></h4>
+              <p class="description">Te ayudamos y te acompañamos en todos los trámites que se deben realizar en Italia para la obtención de tu Ciudadanía Italiana en Italia.
+El acompañamiento que te ofrecemos contempla todas las etapas del proceso desde que llegas a Italia hasta que sos ciudadano italiano.
+</p>
             </div>
           </div>
           <div class="col-md-6 col-lg-5" data-aos="zoom-in" data-aos-delay="200">
