--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="container d-flex justify-content-between">
 
       <div class="logo">
-        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"><h1>      MI LUGAR EN EL MUNDO</h1></a>
+        <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"><h1>&nbsp;&nbsp;MI LUGAR EN EL MUNDO</h1></a>
       </div>
 
       <nav id="navbar" class="navbar">
