--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
         <div class="row about-container">
 
           <div class="col-lg-6 content order-lg-1 order-2">
-            <p>
-              MI LUGAR EN EL MUNDO es un equipo formado por profesionales que te asesorarán y te ayudarán con los trámites ante las oficinas públicas tanto en Argentina como en Italia. <br>
-              Nuestros asesores realizan todos los trámites de <b>ciudadanía italiana</b>. <br>
-              Ellos pueden ayudarte con lo siguiente:
+            <p><br>
+              <b>MI LUGAR EN EL MUNDO</b> es un equipo formado por profesionales que te asesorarán y te ayudarán con los trámites ante las oficinas públicas tanto en Argentina como en Italia. <br>
+              Nuestros asesores realizan todos los trámites de <b>ciudadanía italiana</b>. <br><br>
+              Ellos pueden ayudarte con lo siguiente: <br>
             </p>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
