--- a/index.html
+++ b/index.html
@@ -132,7 +132,25 @@
           <div class="col-lg-6 pt-5 pt-lg-0" data-aos="fade-left">
             <h4>¿Quiénes pueden tener la ciudadanía italiana?</h4>
             <p>
-            Tienen derecho a solicitar la ciudadanía italiana por nacimiento los descendientes por línea directa de italianos (o sea, quienes tengan un ancestro o antepasado italiano), no importando en qué país nació el interesado.
+              Tienen derecho a solicitar la ciudadanía italiana por nacimiento (ius sanguinis) los descendientes por línea directa de italianos 
+              (o sea, quienes tengan un ancestro o antepasado italiano), no importando en qué país nació el interesado.
+              El término "Avo" se refiere a ese antepasado Italiano y luego emigró, es decir, a la primera persona en nuestra ascendencia, 
+              y a partir de quien nosotros podemos rastrear la línea genealógica y acceder a la reconstrucción de nuestra ciudadanía italiana.
+              Pueden darse las siguientes alternativas:
+              1) Si el “Avo” es tu padre obtendrás la ciudadanía italiana por hijo directo.
+              2) El caso más general, se deberá reconstruir la línea de descendencia (o de ascendencia, cadena o linaje) desde el Avo hasta el interesado. 
+              En ese caso obtendrás la ciudadanía italiana por reconstrucción.
+              La transmisión de la ciudadanía por derecho de sangre no prevé límites de generación, pero no deben existir saltos 
+              (por ejemplo ancestros que hayan renunciado a su ciudadanía italiana o la hayan perdido).
+              Los casos arriba mencionados cursan por trámite administrativo ante un consulado italiano de Argentina, o bien, directamente en Italia. 
+              Por falta de turno por parte el Consulado en Argentina, es posible el inicio de un proceso judicial en Italia.
+              3) Pero en el caso de que en alguna instancia la transmisión de una generación a la siguiente sea por vía materna (a través de la madre), 
+              o sea existe una mujer en la línea de descendencia cuyo marido no era italiano, hay que tener en cuenta que:
+              a) Si la madre tuvo a sus hija o hijo después del 01/01/1948, la ciudadanía también se obtiene por trámite administrativo.
+              b) En cambio, si la madre tuvo a sus hijos antes del 01/01/1948, la ciudadanía se obtiene realizando un juicio 
+              (sentencia de la Corte de Casación, 2009).
+              4) Finalmente podés obtener la ciudadanía italiana por matrimonio o naturalización (Ley 91/1992). 
+              Se requiere conocimiento de la lengua italiana, no inferior al nivel B1.
             </p>
             <p>
              
@@ -147,11 +165,23 @@
 
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1" data-aos="fade-right">
             <br>
-            <h4>Ciudadanía "jure sanguinis"</h4>
-            <p> Es posible obtener la Ciudadanía Italiana en Italia de forma rápida y a un bajo costo. 
-A diferencia del proceso de reconocimiento de la Ciudadania por vía Consular en Argentina que puede demorar meses e incluso varios años, el reconocimiento de la Ciudadanía en Italia puede ser obtenido en 3 meses. 
-La Ciudadanía Italiana es un derecho que poseen los descendientes de Italianos, sin límite generacional, y se denomina "Cittadinanza jure sanguinis", es decir, el derecho a obtener el Reconocimiento de la Ciudadanía Italiana por Sangre. 
-Esta guía paso a paso te guiará durante cada una de las etapas de la obtención de la Ciudadanía Italiana en Italia, incluyendo la preparación de la carpeta y cada uno de sus documentos que se necesitan, el viaje a Italia y cada uno de los pasos que debemos realizar en Italia hasta la obtención de la ciudadanía.</p>
+            <h4>Documentación necesaria</h4>
+            <p> 
+              Desde el interesado y hacia atrás en el tiempo hasta llegar al AVO, se requiere:
+              - Acta de Nacimiento.
+              - Acta de Matrimonio.
+              - Acta de Defunción (si fuera el caso).
+              
+              De los familiares en línea recta que aún viven:
+              - Fotocopia del DNI.
+              - Si fuera el caso, sentencia de divorcio (si la persona que solicita la ciudadanía es divorciada) con certificado de cosa juzgada.
+              - Sentencia de adopción (si fuera el caso) con certificado de cosa juzgada.
+              - Si se tienen hijos menores de edad, acta de nacimiento (y obtienen la ciudadanía al mismo tiempo).
+              Y específicamente del Avo:
+              - Acta de Nacimiento emitida por la Comuna italiana, en original también (se pide por email a la Comuna, 
+              y se recibe por correo postal el acta original con los sellos correspondientes).
+              - Certificado de No Naturalización, emitido por la Cámara Nacional Electoral (este documento certifica que el avo no renunció a su ciudadanía).
+            </p> 
           </div>
 
         </div>
