--- a/index.html
+++ b/index.html
@@ -167,20 +167,20 @@
             <br>
             <h4>Documentación necesaria</h4>
             <p> 
-              Desde el interesado y hacia atrás en el tiempo hasta llegar al AVO, se requiere:
-              - Acta de Nacimiento.
-              - Acta de Matrimonio.
-              - Acta de Defunción (si fuera el caso).
+              Desde el interesado y hacia atrás en el tiempo hasta llegar al AVO, se requiere: <br>
+              - Acta de Nacimiento. <br>
+              - Acta de Matrimonio. <br>
+              - Acta de Defunción (si fuera el caso). <br> <br> <br>
               
-              De los familiares en línea recta que aún viven:
-              - Fotocopia del DNI.
-              - Si fuera el caso, sentencia de divorcio (si la persona que solicita la ciudadanía es divorciada) con certificado de cosa juzgada.
-              - Sentencia de adopción (si fuera el caso) con certificado de cosa juzgada.
-              - Si se tienen hijos menores de edad, acta de nacimiento (y obtienen la ciudadanía al mismo tiempo).
-              Y específicamente del Avo:
+              De los familiares en línea recta que aún viven: <br>
+              - Fotocopia del DNI. <br>
+              - Si fuera el caso, sentencia de divorcio (si la persona que solicita la ciudadanía es divorciada) con certificado de cosa juzgada. <br>
+              - Sentencia de adopción (si fuera el caso) con certificado de cosa juzgada. <br>
+              - Si se tienen hijos menores de edad, acta de nacimiento (y obtienen la ciudadanía al mismo tiempo). <br> <br>
+              Y específicamente del Avo: <br>
               - Acta de Nacimiento emitida por la Comuna italiana, en original también (se pide por email a la Comuna, 
-              y se recibe por correo postal el acta original con los sellos correspondientes).
-              - Certificado de No Naturalización, emitido por la Cámara Nacional Electoral (este documento certifica que el avo no renunció a su ciudadanía).
+              y se recibe por correo postal el acta original con los sellos correspondientes). <br>
+              - Certificado de No Naturalización, emitido por la Cámara Nacional Electoral (este documento certifica que el avo no renunció a su ciudadanía). <br>
             </p> 
           </div>
 
