--- a/index.html
+++ b/index.html
@@ -135,21 +135,21 @@
               Tienen derecho a solicitar la ciudadanía italiana por nacimiento (<b>ius sanguinis</b>) los descendientes por línea directa de italianos 
               (o sea, quienes tengan un ancestro o antepasado italiano), no importando en qué país nació el interesado. <br>
               El término "Avo" se refiere a ese antepasado Italiano y luego emigró, es decir, a la primera persona en nuestra ascendencia, 
-              y a partir de quien nosotros podemos rastrear la línea genealógica y acceder a la reconstrucción de nuestra ciudadanía italiana.
-              Pueden darse las siguientes alternativas: <br>
-              <b>1)</b> Si el “Avo” es tu padre obtendrás la ciudadanía italiana por hijo directo. <br>
-              <b>2)</b> El caso más general, se deberá reconstruir la línea de descendencia (o de ascendencia, cadena o linaje) desde el Avo hasta el interesado. 
+              y a partir de quien nosotros podemos rastrear la línea genealógica y acceder a la reconstrucción de nuestra ciudadanía italiana. <br>
+              <b> Pueden darse las siguientes alternativas: </b> <br>
+              &nbsp;&nbsp;<b>1)</b> Si el “Avo” es tu padre obtendrás la ciudadanía italiana por hijo directo. <br>
+             &nbsp; &nbsp;<b>2)</b> El caso más general, se deberá reconstruir la línea de descendencia (o de ascendencia, cadena o linaje) desde el Avo hasta el interesado. 
               En ese caso obtendrás la ciudadanía italiana por reconstrucción.
               La transmisión de la ciudadanía por derecho de sangre no prevé límites de generación, pero no deben existir saltos 
               (por ejemplo ancestros que hayan renunciado a su ciudadanía italiana o la hayan perdido).
               Los casos arriba mencionados cursan por trámite administrativo ante un consulado italiano de Argentina, o bien, directamente en Italia. 
               Por falta de turno por parte el Consulado en Argentina, es posible el inicio de un proceso judicial en Italia. <br>
-              <b>3)</b> Pero en el caso de que en alguna instancia la transmisión de una generación a la siguiente sea por vía materna (a través de la madre), 
+              &nbsp;&nbsp;<b>3)</b> Pero en el caso de que en alguna instancia la transmisión de una generación a la siguiente sea por vía materna (a través de la madre), 
               o sea existe una mujer en la línea de descendencia cuyo marido no era italiano, hay que tener en cuenta que: <br>
-              &nbsp;&nbsp;<i>a)</i> Si la madre tuvo a sus hija o hijo después del 01/01/1948, la ciudadanía también se obtiene por trámite administrativo. <br>
-              &nbsp;&nbsp;<i>b)</i>En cambio, si la madre tuvo a sus hijos antes del 01/01/1948, la ciudadanía se obtiene realizando un juicio 
+              &nbsp;&nbsp;&nbsp;&nbsp;<i>a)</i> Si la madre tuvo a sus hija o hijo después del 01/01/1948, la ciudadanía también se obtiene por trámite administrativo. <br>
+              &nbsp;&nbsp;&nbsp;&nbsp;<i>b)</i> En cambio, si la madre tuvo a sus hijos antes del 01/01/1948, la ciudadanía se obtiene realizando un juicio 
               (sentencia de la Corte de Casación, 2009). <br>
-              <b>4)</b> Finalmente podés obtener la ciudadanía italiana por matrimonio o naturalización (Ley 91/1992). <br>
+              &nbsp;&nbsp;<b>4)</b> Finalmente podés obtener la ciudadanía italiana por matrimonio o naturalización (Ley 91/1992). <br>
               <b>Se requiere conocimiento de la lengua italiana, no inferior al nivel B1.</b>
             </p>
             <p>
