--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">¿Quiénes somos?</a></li>
+          <li><a class="nav-link scrollto" href="#about > div > div:nth-child(3) > div:nth-child(1) > img">Información</a></li>
           <li><a class="nav-link scrollto" href="#services">Servicios</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
         </ul>
