--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">¿Quiénes somos?</a></li>
-          <li><a class="nav-link scrollto" href="#about > div > div:nth-child(3) > div:nth-child(1) > img">Información</a></li>
+          <li><a class="nav-link scrollto" href="#info">Información</a></li>
           <li><a class="nav-link scrollto" href="#services">Servicios</a></li>
           <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
         </ul>
@@ -121,7 +121,19 @@
             </div>
 
           </div>
+        </div>
+      </div>
+    </section>
 
+      <section id="info">
+      <div class="container" data-aos="fade-up">
+
+        <header class="section-header">
+          <h3><b>Informacion</b></h3>
+        </header>
+
+        <div class="row about-container">
+        
           <div class="col-lg-6 background order-lg-2" data-aos="zoom-in">
             <img src="assets/img/about-img.png" class="img-fluid" alt="">
           </div>
