--- a/index.html
+++ b/index.html
@@ -117,13 +117,12 @@
               <h4 class="title"><a href="">Certificado </a></h4>
               <p class="description"> - Obtención del certificado de Cámara Nacional Electoral (de no naturalización).
                 - Rectificación de documentación vía administrativa y judicial. </p>
-
+            </div>
+          </div>
           <div class="col-lg-6 background order-lg-2" data-aos="zoom-in">
             <img src="assets/img/about-img.png" class="img-fluid" alt="">
           </div>
-
-            </div>
-          </div>
+          
         </div>
       </div>
     </section>
@@ -132,7 +131,7 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h3><b>Informacion</b></h3>
+          <h3><b>Informacion</b></h3><br><br>
         </header>
 
         <div class="row about-extra">
@@ -141,7 +140,7 @@
           </div>
           
           <div class="col-lg-6 pt-5 pt-lg-0" data-aos="fade-left">
-            <h3><b>¿Quiénes pueden tener la ciudadanía italiana?</b></h3>
+            <h4><b>¿Quiénes pueden tener la ciudadanía italiana?</b></h4>
             <p>
               Tienen derecho a solicitar la ciudadanía italiana por nacimiento (<b>ius sanguinis</b>) los descendientes por línea directa de italianos 
               (o sea, quienes tengan un ancestro o antepasado italiano), no importando en qué país nació el interesado. <br>
@@ -175,7 +174,7 @@
               &nbsp;&nbsp;&nbsp;&nbsp;<i>b)</i> En cambio, si la madre tuvo a sus hijos antes del 01/01/1948, la ciudadanía se obtiene realizando un juicio 
               (sentencia de la Corte de Casación, 2009). <br>
               &nbsp;&nbsp;<b>4)</b> Finalmente podés obtener la ciudadanía italiana por matrimonio o naturalización (Ley 91/1992). <br>
-              <b>Se requiere conocimiento de la lengua italiana, no inferior al nivel B1.</b>
+              <b>Se requiere conocimiento de la lengua italiana, no inferior al nivel B1.</b><br><br><br><br>
           </div>
         </div>
 
