--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
       </div>
 
       <div class="hero-info" data-aos="zoom-in" data-aos-delay="100">
-        <h2><span>Bienvenidos</span><br>a su Ciudadanía Italiana!</h2> <br><br>
-        <h2>Mi Lugar En El Mundo</h2>
+        <h2><span>Bienvenidos</span><br>a su Ciudadanía Italiana!</h2>
         <div>
           <a href="#about" class="btn-get-started scrollto">Inicio</a>
           <a href="#services" class="btn-services scrollto">Nuestros Servicios</a>
@@ -131,7 +130,7 @@
       <div class="container" data-aos="fade-up">
 
         <header class="section-header">
-          <h3><b>Informacion</b></h3><br><br>
+          <h3><b>Información</b></h3><br><br>
         </header>
 
         <div class="row about-extra">
