--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
           <li><a class="nav-link scrollto" href="#about">¿Quiénes somos?</a></li>
           <li><a class="nav-link scrollto" href="#info">Información</a></li>
           <li><a class="nav-link scrollto" href="#services">Servicios</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
+          <li><a class="nav-link scrollto" href="#footer">Contacto</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
