--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
 
       <div class="hero-info" data-aos="zoom-in" data-aos-delay="100">
-        <h2><span>Bienvenidos</span><br>a su Ciudadanía Italiana!</h2>
+        <h2><b>Bienvenidos</b><br>a su Ciudadanía Italiana!</h2>
         <div>
           <a href="#about" class="btn-get-started scrollto">Inicio</a>
           <a href="#services" class="btn-services scrollto">Nuestros Servicios</a>
