--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@ El acompañamiento que te ofrecemos contempla todas las etapas del proceso desde
             <div class="social-links">
               <a href="https://www.facebook.com/saretta.ascolese" class="facebook"><i class="bi bi-facebook"></i></a>
               <a href="https://www.instagram.com/sarettaascolese/" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.tiktok.com/@sarettaascolese" class="tiktok"><i class="bi bi-tiktok"></i></a>
             </div>
 
           </div>
