--- a/index.html
+++ b/index.html
@@ -312,6 +312,7 @@ El acompañamiento que te ofrecemos contempla todas las etapas del proceso desde
               <a href="https://www.facebook.com/saretta.ascolese" class="facebook"><i class="bi bi-facebook"></i></a>
               <a href="https://www.instagram.com/sarettaascolese/" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="https://www.tiktok.com/@sarettaascolese" class="tiktok"><i class="bi bi-tiktok"></i></a>
+              <a href="https://www.linkedin.com/in/sara-ascolese-165658261/" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
 
           </div>
